--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -3,10 +3,34 @@
     display: block;
     width: 100vw;
     object-fit: cover;
+    transition: transform 0.1s linear;
 }
 
 .video-mobile {
     display: none;
+    transition: transform 0.1s linear;
+}
+
+.video-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.zoom-in {
+    transition: transform 0.5s ease-in-out; /* Smooth transition */
+}
+.zoom-in.zoom {
+    transform: scale(1.5); /* Scale up to 150% */
+}
+
+.fade-out {
+    /* opacity: 1;
+    transition: opacity 1s ease-in-out; */
+    transition: transform 0.5s ease-in-out;
+}
+.fade-out.fade {
+    transform: scale(0.5);
 }
 
 @media screen and (max-width: 767px) {
